# Price-Filter

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/: fintech_scraper.py
src/calculator/: retriever.ipynb  settings.py  threshold_comparer.py
src/retriever/: ProductPage.json  ProductPage.jsonl  retriever.ipynb  retriever.py  run.py  script.js
src/retriever/retriever/: items.py  middlewares.py  pipelines.py  settings.py
src/retriever/retriever/spiders/: retriever_spider.py
