[tool.poetry]
name = "price-filter"
version = "0.1.0"
description = "A price tracker system that notifies a user about the percentage change in price beyond a fixed threshold."
authors = ["ChinomnsoC <chinomnsoc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.2"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
requests = "^2.29.0"
requests-oauthlib = "^1.3.1"
scrapy = "^2.8.0"
Twisted = "^21.7.0"
uvicorn = "^0.21.1"
validators = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
