[tool.poetry]
name = "price-filter"
version = "0.1.0"
description = "A price tracker system that notifies a user about the percentage change in price beyond a fixed threshold."
authors = ["ChinomnsoC <chinomnsoc@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
lxml = "^6.0.4"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.2.2"
requests = "^2.33.1"
requests-oauthlib = "^2.0.0"
scrapy = "^2.15.0"
Twisted = "^25.5.0"
uvicorn = "^0.44.0"
validators = "^0.35.0"
openpyxl = "^3.1.5"
beautifulsoup4 = "^4.14.3"
pandas = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
